# py-configs

./: .flake8  .pre-commit-config.yaml  .toml  Makefile  README.md  dev-requirements.txt  pyproject.toml  pytest.ini
