
[tool.black]
# https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html
line-length = 88

[tool.poetry]
name = ""
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9.10"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-django = "^4.4.0" # pytest suport to django
pytest-testmon = "^1.1.2" # pytest --testmon (test only changed files)
blue = "^0.7.0"
isort = "^5.10.1"
mkdocs = "^1.2.3"
prospector = "^1.6.0"
pip-audit = "^1.1.2"

flake8 = "^3.9.2"
autopep8 = "^1.6.0"
Faker = "^4.1.1"
factory_boy = "^2.12.0"
pre-commit = "^2.14.0"
django-test-migrations = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
